--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 						</li>
 						<li>
 							<strong>System-Level Frameworks for AI Hardware Design</strong> <br>
-							<i>Develop design tools to facilitate effective hardware design and/or workload deployment on edge-AI.</i> <br>
+							<i>Develop design tools to facilitate effective hardware development and/or workload deployment on edge-AI.</i> <br>
 						</li>
 					</ul>					
 				</div>	
