--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 
 				<h4 class="mb-4 border-bottom pb-2" style="margin-top: 1em; color: #00477A;"> <strong>Open Positions</strong></h4>
 				<div class="news-list">
+					<!--
 					<div class="news-item">
 						<p style="margin-bottom: 0.3em; margin-top: -0.8em;"><strong>Ph.D. student positions are avaiable for Autumn 2026 semester. 
 						Further details for prospective students are provided in </strong>
@@ -166,8 +167,9 @@
 						here</a>. 
 						</p>
 					</div>
+					-->
 					<div class="news-item">
-						<p>No other opportunities (Bachelor's, Master's, internship, RA, post-doc, etc.) are currently available, and will be updated in due time.</p>
+						<p>No opportunities (Ph.D., Bachelor's, Master's, internship, RA, post-doc, etc.) are currently available, and will be updated in due time.</p>
 					</div>
 				</div>
 								
